<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.my.udacity.phonestore.presentation.IntroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_default_gradient"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="@dimen/welcome_text_34" />

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:fontFamily="@font/roboto"
            android:text="@string/introduce"
            android:textSize="@dimen/text_intro_18" />

        <Button
            android:id="@+id/btnIntro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginTop="@dimen/default_margin_16"
            android:layout_marginEnd="@dimen/default_margin_16"
            android:background="@drawable/round_button"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_label_skip" />

    </LinearLayout>
</layout>