<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phone"
            type="com.my.udacity.phonestore.model.Phone" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:background="@drawable/bg_default_gradient"
        app:cardCornerRadius="@dimen/default_margin_16"
        app:cardElevation="@dimen/default_elevation_4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8">

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="@dimen/default_image_size_100"
                android:layout_height="@dimen/default_image_size_100"
                android:padding="@dimen/default_margin_8"
                android:src="@drawable/phonepic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLabelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_label_name"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@id/imagePhone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_16"
                android:fontFamily="@font/roboto"
                android:text="@={phone.name}"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@id/tvLabelName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLabelCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_label_company"
                app:layout_constraintStart_toEndOf="@id/imagePhone"
                app:layout_constraintTop_toBottomOf="@id/tvLabelName" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:fontFamily="@font/roboto"
                android:text="@={phone.company}"
                app:layout_constraintStart_toEndOf="@id/tvLabelCompany"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvLabelVersionOS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_label_version"
                app:layout_constraintStart_toEndOf="@id/imagePhone"
                app:layout_constraintTop_toBottomOf="@id/tvCompany" />

            <TextView
                android:id="@+id/tvVersionOS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:fontFamily="@font/roboto"
                android:text="@={phone.systemOS}"
                app:layout_constraintStart_toEndOf="@id/tvLabelVersionOS"
                app:layout_constraintTop_toBottomOf="@id/tvLabelCompany" />

            <TextView
                android:id="@+id/tvLabelDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_label_description"
                app:layout_constraintStart_toEndOf="@id/imagePhone"
                app:layout_constraintTop_toBottomOf="@id/tvLabelVersionOS" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:fontFamily="@font/roboto"
                android:text="@={phone.description}"
                app:layout_constraintStart_toEndOf="@id/tvLabelDescription"
                app:layout_constraintTop_toBottomOf="@id/tvLabelVersionOS" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>