<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phone"
            type="com.my.udacity.phonestore.model.Phone" />

        <variable
            name="viewModel"
            type="com.my.udacity.phonestore.model.PhoneViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:text="Name:"
            android:textSize="@dimen/medium_text_size_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_8"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:inputType="textPersonName"
                android:text="@={phone.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:layout_marginEnd="@dimen/default_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:text="@string/tv_label_version_os"
            android:textSize="@dimen/medium_text_size_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvSystemOS"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_8"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSystemOS"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:text="@={phone.systemOS}"
                android:layout_marginEnd="@dimen/default_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:text="@string/tv_label_company"
            android:textSize="@dimen/medium_text_size_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCompany"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_8"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCompany"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:text="@={phone.company}"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:layout_marginEnd="@dimen/default_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginEnd="@dimen/default_margin_8"
            android:text="@string/tv_label_description"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_8"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={phone.description}"
                android:layout_marginStart="@dimen/default_margin_8"
                android:layout_marginEnd="@dimen/default_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:layout_marginTop="@dimen/button_indent_margin_32"
                android:layout_marginEnd="@dimen/default_margin_8"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/button_label_cancel" />

            <Button
                android:id="@+id/btn_save_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_8"
                android:layout_marginTop="@dimen/button_indent_margin_32"
                android:onClick="@{()-> viewModel.saveData(phone)}"
                android:layout_marginEnd="@dimen/default_margin_8"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/button_label_save" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</layout>